# binquant

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  compose-production.yml  compose.yml  consumer.py  data_analytics_pipe.py  database.py  docker-compose.yml  healthcheck.py  kafka_consumer.py  kafka_consumer_message.py  kafka_producer.py  main.py  mypy.ini  producer.py  pyproject.toml  readme.md  requirements.txt  serve.py
.codex/: README.md
.codex/skills/live-strategy-eval/: SKILL.md
.codex/skills/live-strategy-eval/agents/: openai.yaml
.codex/skills/live-strategy-eval/references/: module-map.md
.codex/skills/live-strategy-eval/scripts/: live_market_probe.py
.codex/skills/telegram-analyzer/: SKILL.md
.codex/skills/telegram-analyzer/agents/: openai.yaml
.codex/skills/telegram-export/: SKILL.md
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pr.yml  prod-deploy.yml  staging-deploy.yml
.runtime/: grid_ladder.json
algorithms/: activity_burst_pump.py  apex_flow.py  apex_flow_aggressive.py  atr_breakout.py  base.py  base_apex_flow.py  binance_report_ai.py  coinrule.py  gainers_predictor.py  heikin_ashi.py  heikin_ashi_spike_hunter.py  isolation_forest_anomalies.py  liquidation_sweep_pump.py  local_min_max.py  ma_candlestick.py  market_breadth.py  market_domination.py  nbeats_market_breadth.py  price_changes.py  rally.py  spike_hunter.py  spike_hunter_deprecated.py  spike_hunter_memes.py  spike_hunter_v2.py  spike_hunter_v3.py  spike_hunter_v3_kucoin.py  spikehunter_scoring.py  spikehunter_v1.py  timeseries_gpt.py  top_gainer_drop.py  top_gainers_reversal_drop.py  whale_alert_signals.py  whale_signals.py
algorithms/checkpoints/: isolation_forest_anomalies.pkl  market_breadth_nbeats_model_v1.pth  spikehunter_model.pkl  spikehunter_model_meme.pkl  spikehunter_model_v1.pkl  spikehunter_model_v2.pkl  usdc_gainer_model.pkl
algorithms/coinrule/: coinrule.py  grid_trading.py  price_tracker.py
calibrators/: leverage_calibrator.py
config/: grid_thresholds.default.json
consumer/: __init__.py
consumers/: autotrade_consumer.py  consume_klines.py  klines_provider.py  signal_collector.py  signals_provider.py  telegram_consumer.py
docs/: KUCOIN_WEBSOCKET.md  KUCOIN_WEBSOCKET_SDK.md  websocket_examples.py
inbound_data/: signals_base.py  signals_inbound.py
market_regime/: README.md  context_scoring.py  grid_only_policy.py  live_market_context_accumulator.py  market_state_store.py  models.py  regime_routing.py  regime_transitions.py  score_signal_candidate_with_context.py  signal_context_scorer.py
market_regime_prediction/: __init__.py  context_scoring.py  integration.py  live_market_context_accumulator.py  market_context_model.py  market_state_store.py  models.py  score_signal_candidate_with_context.py  signal_context_scorer.py
models/: algorithms.py  bot.py  klines.py  signals.py  strategies.py
outbound_data/: signals_outbound.py
producer/: __init__.py  signals.py
producers/: analytics.py  base.py  context_evaluator.py  dataframe_producer.py  klines_connector.py  produce_klines.py  technical_indicators.py
producers/models/: klines.py
shared/: apis.py  autotrade.py  bot_exit.py  config.py  enums.py  exceptions.py  indicators.py  kucoin_futures.py  logging_config.py  ohlc.py  rebalance_listener.py  setup_signals.py  strategy_mixin.py  telegram_bot.py  time_of_day_filter.py  utils.py
shared/apis/: binance_api.py  binbot_api.py  kucoin_api.py  time_gpt.py  types.py
shared/streaming/: async_producer.py  async_socket_client.py  kucoin_async_client.py  kucoin_async_socket_client.py  kucoin_socket_client.py  kucoin_socket_manager.py  kucoin_websocket_sdk.py  socket_client.py  socket_manager.py  websocket_factory.py
strategies/: activity_burst_pump.py  apex_flow.py  binance_report_ai.py  conservative_spike_hunter.py  inverse_price_tracker.py  liquidation_sweep_pump.py  market_regime_notifier.py  mean_reversion_fade.py  range_bb_rsi_mean_reversion.py  range_failed_breakout_fade.py  relative_strength_reversal_range.py  spike_hunter_v3_kucoin.py  top_gainer_drop.py  top_gainers_reversal_drop.py
strategies/checkpoints/: spikehunter_model.pkl
strategies/coinrule/: bb_extreme_reversion.py  buy_the_dip.py  coinrule.py  grid_trading.py  price_tracker.py
strategies/grid/: ladder_deployer.py
tests/: __init__.py  conftest.py  test_activity_burst_pump.py  test_apex_flow.py  test_autotrade_consumer.py  test_coinrule_buy_the_dip.py  test_coinrule_price_tracker.py  test_conservative_spike_hunter.py  test_context_evaluator.py  test_grid_only_policy.py  test_inverse_price_tracker.py  test_klines_provider.py  test_ladder_deployer.py  test_leverage_calibrator.py  test_liquidation_sweep_pump.py  test_main.py  test_market_regime.py  test_market_regime_notifier.py  test_market_regime_prediction.py  test_mean_reversion_fade.py  test_ohlc.py  test_producer.py  test_range_bb_rsi_mean_reversion.py  test_range_failed_breakout_fade.py  test_relative_strength_reversal_range.py  test_spike_hunter_v3_kucoin.py  test_telegram_consumer.py  test_time_of_day_filter.py  test_top_gainers_reversal_drop.py  test_utils.py  test_websocket_factory.py
(+5 files in other folders)
