[project]
name = "binquant"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymongo==4.6.3",
    "python-dotenv==1.1.0",
    "requests-html==0.10.0",
    "websocket-client==1.5.0",
    "requests-cache==0.9.1",
    "kafka-python==2.0.2",
    "pydantic==2.7.0",
    "aiokafka>=0.12.0",
    "pandas>=2.2.3",
    "httpx>=0.27.2",
    "requests>=2.32.3",
    "python-telegram-bot==22.1",
    "scipy>=1.14.1",
    "numpy==2.2.0",
    "aiohttp>=3.11.17",
    "torch",
    "torchvision",
    "darts",
    "scikit-learn==1.7.0",
    "statsforecast>=2.0.1",
    "lightgbm>=4.6.0",
    "confluent-kafka>=2.11.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "httpx",
    "mypy",
    "coverage",
    "ruff",
    "types-requests"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
