[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binquant"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "aiohttp>=3.11.17",
    "apscheduler>=3.6.3",
    "confluent-kafka>=2.11.1",
    "kafka-python>=2.0.2",
    "kucoin-universal-sdk>=1.3.0",
    "passlib",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-jose",
    "python-telegram-bot>=22.1",
    "requests>=2.32.5",
    "requests-cache>=1.2.0",
    "requests-html>=0.10.0",
    "scikit-learn==1.7.0",
    "uvicorn>=0.37.0",
    "websocket-client>=1.5.0",
    "pybinbot==0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "httpx",
    "types-requests",
    "coverage",
    "pytest-vcr>=1.0.2",
    "ruff>=0.11.12",
    "mypy>=1.16.0",
    "types-requests>=2.32.0.20250515",
    "pytest-asyncio>=1.2.0",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "I001",  # ignore import block unsorted/unformatted
]

[tool.setuptools]
packages = []

[tool.uv]
package = false

[tool.mypy]
implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = false
show_error_codes = true
follow_imports = "silent"
warn_unused_ignores = true
implicit_reexport = true
explicit_package_bases = true
